2011-01-08   Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: more tests on *YFLAGS support
	* tests/yflags-var-expand.test: New test, still xfailing.  It
	exposes automake bug#7800 -- "automake fails to honor `-d' in
	AM_YFLAGS when variable expansions are involved".
	* tests/yflags-d-false-positive.test: New test, checking that
	automake do not spuriously see `-d' in *YFLAGS when that isn't
	really there.
	* tests/yflags-force-override.test: New test, checking that
	automake can cope with definition of the YFLAGS variable in
	Makefile.am (even if that is an extremely bad practice, as that
	variable is user-reserved).
	* tests/yflags-cmdline-override.test: New test, checking that
	automake can cope with user-redefinition of YFLAGS at configure
	time and/or at make time.
	* tests/yflags-conditional.test: New test, checks that automake
	warns on conditionally-defined *YFLAGS variables.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

2011-01-08   Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: extend and improve tests
	* tests/yacc-basic.test: Also check that the intermediate C file
	is mentioned in the generated Makefile.in, and that it is created
	by the first make invocation.
	* tests/yacc3.test: Test removed, superseded by ...
	* tests/yacc-d-basic.test: ... this new test.
	* tests/yacc2.test: Add reference to that new test in the heading
	comments.
	* tests/yacc-d-vpath.test: New test.
	* tests/yaccvpath.test: Updated heading comments.  Do not require
	gcc anymore, as any working C compiler should be enough.  Remove
	redundant comments.
	* tests/yacc-nodist.test: New test.
	* tests/yacc-dist-nobuild.test: New test.
	* tests/Makefile.am (TESTS): Update.

2010-12-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Extend, fix and improve tests on Lex and Yacc support.
	* tests/lexcpp.test: New test script, on support for Lex + C++.
	* tests/lexvpath.test: New test script, test build and rebuild
	rules for lexers in VPATH setup.