@@ -62,10 +62,6 @@ END
 cat > sub2/Makefile.am << 'END'
 include $(top_srcdir)/sub1/Makefile.am
 AM_YFLAGS = -d
-## FIXME: these apparently redundant definitions are required to
-## work around automake bug#7800.
-bar_YFLAGS += -d
-qux_YFLAGS += -d
 END
 
 cat > sub1/parse.y << 'END'
@@ -85,7 +81,6 @@ int main ()
 }
 END
 cp sub1/main.c sub2/main.c
-
 
 $ACLOCAL
 $AUTOCONF
