@@ -1,5 +1,17 @@
 2011-01-08   Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	yacc: support variable expansions in *YFLAGS definition.
+	This change fixes automake bug#7800.
+	* automake.in (lang_yacc_target_hook): Use 'value_as_list_recursive'
+	instead of 'variable_value' to get the value of *YFLAGS variables.
+	Related changes.
+	($DASH_D_PATTERN): Removed.
+	* tests/Makefile.am (XFAIL_TESTS): Remove yflags-var-expand.test.
+	* tests/yacc-clean.test: Remove workaround for now-fixed bug.
+	* NEWS: Update.
+
+2011-01-08   Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	yacc: more tests on *YFLAGS support
 	* tests/yflags-var-expand.test: New test, still xfailing.  It
 	exposes automake bug#7800 -- "automake fails to honor `-d' in
